# livesplit-auto-splitting

./: .gitignore  Cargo.toml  WebAssemblyEnvironment.md
asl-capi/: Cargo.toml
asl-capi/src/: lib.rs
asl-derive/src/: lib.rs
asl-lang/: Cargo.toml  TODO.md  script.asl  tuples.asl
asl-lang-capi/: Cargo.toml
asl-lang-capi/src/: lib.rs
asl-lang-cli/: Cargo.toml  script.asl
asl-lang-cli/src/: main.rs
asl-lang/src/: ast.rs  code_gen.rs  debug_info.rs  error.rs  function_indexing.rs  function_signatures.rs  grammar.lalrpop  lib.rs  name_resolution.rs  ops.rs  reg_alloc.rs  reg_extend.rs  specify_general_types.rs  tests.rs  types.rs
asl-runtime/: Cargo.toml
asl-runtime/src/: environment.rs  lib.rs  main.rs  pointer.rs  process.rs  runtime.rs
asl-rust-example/: Cargo.toml
asl-rust-example/src/: asl.rs  lib.rs
asl-web-ide/: .gitignore  asl.monarch  index.js  package-lock.json  package.json  style.css  webpack.config.js
